# Shooter

./: .gitignore  CMakeLists.txt  Description.txt  Main.cpp  README.md
cmake/: config.h.in
cmake/modules/: FindBox2D.cmake
editor/: CMakeLists.txt
editor/include/: CMakeLists.txt
editor/include/Editor/: CMakeLists.txt  ContentPane.h  Editor.h  EditorGeneralPanel.h  EditorLayersPanel.h  EditorObjectPanel.h  Functions.h  Grid.h  Layer.h  LayerPropertiesPanel.h  LayersListBox.h  Map.h  MapCreatorPanel.h  PanelBase.h  PropertiesPanel.h  Tile.h
editor/include/Editor/AssetManager/: AssetManager.h  AssetManagerEffectPanel.h  AssetManagerImagePanel.h  AssetManagerMusicPanel.h  AssetManagerTilesheetPanel.h  CMakeLists.txt
editor/include/Editor/Events/: CMakeLists.txt  MapChanged.h  id.h
editor/include/Editor/Layers/: CMakeLists.txt  Layer.h
editor/src/: CMakeLists.txt
editor/src/Editor/: CMakeLists.txt  ContentPane.cpp  Editor.cpp  EditorGeneralPanel.cpp  EditorLayersPanel.cpp  EditorObjectPanel.cpp  Functions.cpp  Grid.cpp  Layer.cpp  LayerPropertiesPanel.cpp  LayersListBox.cpp  Map.cpp  MapCreatorPanel.cpp  PanelBase.cpp  PropertiesPanel.cpp  Tile.cpp
editor/src/Editor/AssetManager/: AssetManager.cpp  AssetManagerEffectPanel.cpp  AssetManagerImagePanel.cpp  AssetManagerMusicPanel.cpp  AssetManagerTilesheetPanel.cpp  CMakeLists.txt
editor/src/Editor/Events/: CMakeLists.txt  MapChanged.cpp
editor/src/Editor/Layers/: CMakeLists.txt  Layer.cpp
extlibs/: CMakeLists.txt
include/: CMakeLists.txt  Settings.h
include/Engin/: CMakeLists.txt  Game.h  StateBase.h
include/Events/: CMakeLists.txt  ChangeState.h  EventBase.h  EventManager.h  Events.h  Id.h  MusicVolumeChanged.h  PlayMusic.h  PlaySound.h  Pop.h  PushState.h  SFEventHandler.h  ShowGrid.h  SoundVolumeChanged.h
include/States/: CMakeLists.txt  Id.h  IntroState.h  MapCreatorState.h  PlayState.h  StateBase.h
install/: bootstrap.sh
shooter/: CMakeLists.txt  CMakeLists.txt.orig  Main.cpp
shooter/Assets/Level/: .map  Level.map
shooter/Assets/Level/1-0/: 1-0.map
shooter/Assets/Level/1-1/: 1-1.map  Gekki.lay
shooter/Assets/Level/1-2/: 1-2.map
shooter/Assets/Level/1-3/: 1-3.map  Gekki.lay  aaaaaa.lay
shooter/Assets/Level/Blah/: Blah.map
shooter/Assets/Level/Temp/: Background.lay  Forground.lay  Temp.map
shooter/Assets/Theme/: Black.txt
shooter/include/: ButtonId.h  CMakeLists.txt  ContactListener.h  DebugDraw.h  Functions.h  Layer.h  Map.h  MapCreatorPanel.h  ObjectType.h  Settings.h
shooter/include/Engin/: CMakeLists.txt  Game.h
shooter/include/Entity/: CMakeLists.txt  ECS.h
shooter/include/Entity/Components/: CMakeLists.txt  Component.h  ComponentSet.h  ComponentType.h  PhysicsComponent.h  SpriteComponent.h
shooter/include/Entity/Systems/: CMakeLists.txt  DrawingSystem.h  PhysicsSystem.h  System.h
shooter/include/Events/: CMakeLists.txt  EventBase.h  Events.h  Id.h  MapChanged.h  PlayerCollision.h  SFEventHandler.h  ShowGrid.h  SnapToGrid.h  handleSFEvent.h
shooter/include/Gui/: CMakeLists.txt  ContentPane.h  ControlPanel.h  DevPanel.h  DevSettingsPanel.h  GeneralPanel.h  GuiBase.h  IntroPanel.h  MapLoader.h  MultiPlayerSettingsPanel.h  NewLevelSettingsPanel.h  OptionsPanel.h  PanelBase.h  PlayerInfo.h  PropertiesPanel.h  ScorePanel.h  SoundPanel.h  StartPanel.h  TimerPanel.h  WorldSelect.h  id.h
shooter/include/Gui/Editor/: CMakeLists.txt  EditorGeneralPanel.h  EditorLayersPanel.h  EditorObjectPanel.h  EditorPanel.h  Grid.h  LayerPropertiesPanel.h  MapCreatorBasePanel.h  MapCreatorPanel.h
shooter/include/Gui/Options/: CMakeLists.txt  ControlPanel.h  DevSettingsPanel.h  GeneralPanel.h  MultiPlayerSettingsPanel.h  OptionsPanel.h  SoundPanel.h
shooter/include/States/: CMakeLists.txt  Id.h  IntroState.h  LevelSelectState.h  MapCreatorState.h  MapCreatorState.h.orig  PlayState.h  StateBase.h  States.h  WorldSelectState.h
shooter/include/Widget/: CMakeLists.txt  MultiListBox.h
shooter/src/: CMakeLists.txt  ContactListener.cpp  DebugDraw.cpp  Functions.cpp  Layer.cpp  Map.cpp  MapCreatorPanel.cpp  Settings.cpp  Tile.cpp
shooter/src/Engin/: CMakeLists.txt  Game.cpp
shooter/src/Entity/: CMakeLists.txt  ECS.cpp
shooter/src/Entity/Components/: CMakeLists.txt  Component.cpp  ComponentSet.cpp  PhysicsComponent.cpp  SpriteComponent.cpp
shooter/src/Entity/Systems/: CMakeLists.txt  DrawingSystem.cpp  PhysicsSystem.cpp  System.cpp
shooter/src/Events/: CMakeLists.txt  EventBase.cpp  EventManager.cpp  PlayerCollision.cpp  ShowGrid.cpp  SnapToGrid.cpp
shooter/src/Gui/: CMakeLists.txt  ContentPane.cpp  ControlPanel.cpp  DevPanel.cpp  DevSettingsPanel.cpp  GeneralPanel.cpp  GuiBase.cpp  IntroPanel.cpp  MapLoader.cpp  MultiPlayerSettingsPanel.cpp  NewLevelSettingsPanel.cpp  OptionsPanel.cpp  PanelBase.cpp  PlayerInfo.cpp  PropertiesPanel.cpp  ScorePanel.cpp  SoundPanel.cpp  StartPanel.cpp  TimerPanel.cpp  WorldSelect.cpp
shooter/src/Gui/Editor/: CMakeLists.txt  EditorGeneralPanel.cpp  EditorLayersPanel.cpp  EditorObjectPanel.cpp  EditorPanel.cpp  Grid.cpp  LayerPropertiesPanel.cpp  MapCreatorBasePanel.cpp  MapCreatorPanel.cpp
shooter/src/Gui/Options/: CMakeLists.txt  ControlPanel.cpp  DevSettingsPanel.cpp  GeneralPanel.cpp  MultiPlayerSettingsPanel.cpp  OptionsPanel.cpp  SoundPanel.cpp
shooter/src/States/: CMakeLists.txt  IntroState.cpp  LevelSelectState.cpp  MapCreatorState.cpp  PlayState.cpp  StateBase.cpp  WorldSelectState.cpp
shooter/src/Widget/: CMakeLists.txt  MultiListBox.cpp
src/: CMakeLists.txt  MapCreatorPanel.cpp  Settings.cpp
src/Engin/: CMakeLists.txt  StateBase.cpp
src/Events/: CMakeLists.txt  ChangeState.cpp  EventBase.cpp  MusicVolumeChanged.cpp  PlayMusic.cpp  PlaySound.cpp  Pop.cpp  PushState.cpp  ShowGrid.cpp  SoundVolumeChanged.cpp
src/States/: CMakeLists.txt  IntroState.cpp  MapCreatorState.cpp  PlayState.cpp  StateBase.cpp
test/: CMakeLists.txt
test/Editor/: CMakeLists.txt  MapTest.cpp
