set(FILES 	"${CMAKE_CURRENT_SOURCE_DIR}/Settings.cpp"
            "${CMAKE_CURRENT_SOURCE_DIR}/Functions.cpp"
            "${CMAKE_CURRENT_SOURCE_DIR}/Map.cpp"
            "${CMAKE_CURRENT_SOURCE_DIR}/Tile.cpp"
            "${CMAKE_CURRENT_SOURCE_DIR}/Layer.cpp"
)
set(SUB_DIRECTORIES "Engin"
					"Events"
					"States"
					"Widget"
					"Gui"
)

#Add subdirectories
foreach(LOOP_VAR ${SUB_DIRECTORIES})
    add_subdirectory("${LOOP_VAR}")
endforeach()

string(REGEX MATCH "(/|\\|\)(include|src|test)(/|\\|\).*" RELATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
if(FILES)
	#Add source file to target
	target_sources(	"${PROJECT_NAME}" PRIVATE ${FILES})

	#Install source files
	install(FILES ${FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/${RELATIVE_PATH}")
endif()
