set(FILES 	"${CMAKE_CURRENT_SOURCE_DIR}/EventBase.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/ChangeState.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/PlayMusic.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/PlaySound.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/Pop.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/EventManager.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/PushState.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/MusicVolumeChanged.cpp"
			"${CMAKE_CURRENT_SOURCE_DIR}/SoundVolumeChanged.cpp"
)
set(SUB_DIRECTORIES ""
)

#Add subdirectories
foreach(LOOP_VAR ${SUB_DIRECTORIES})
    add_subdirectory("${LOOP_VAR}")
endforeach()

string(REGEX MATCH "(/|\\|\)(include|src|test)(/|\\|\).*" RELATIVE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
if(FILES)
	#Add source file to target
	target_sources(	"${PROJECT_NAME}" PRIVATE ${FILES})

	#Install source files
	install(FILES ${FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/${RELATIVE_PATH}")
endif()
